# workops

./: .gitignore  Cargo.toml
migrations/: 0001_InitialSetup.sql
projtrack/: Cargo.toml
projtrack/migrations/: 0001_InitialSetup.sql
projtrack/src/: main.rs
projtrack/src/auth/: mod.rs
projtrack/src/db/: mod.rs  users.rs
projtrack/src/routes/: mod.rs
src/: main.rs
src/auth/: mod.rs
src/db/: mod.rs  projects.rs  users.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/ui/: index.rs  mod.rs  project.rs
static/css/: site.css
views/: base.html.tera  index.html.tera  nav.html.tera
views/project/: new_project.html.tera
