[package]
name = "workops"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.1", features=["json"] }
serde = "1.0"
rocket_dyn_templates = { version="0.1.0-rc.1", features=["tera"]}
rand = { version="0.8", features=["getrandom"] }
argon2 = "0.3"
chrono = { version="0.4", features=["serde"] }
dotenv = "0.15"

[dependencies.sqlx]
version = "0.5"
features = ["sqlite", "macros", "runtime-tokio-rustls", "chrono"]
